--- a/src/app/(root)/home.css
+++ b/src/app/(root)/home.css
@@ -1,27 +1,86 @@
 .main-home {
   background-color: #0f172a;
-  height: 99vh;
+  height: 98vh;
 }
 
 .social-links > li {
   margin-top: 14px;
   font-size: 28px;
-}
-.social-links > li > a {
-  color: #818cf8;
+  transition: transform 0.3s ease, color 0.3s ease;
 }
 
-.contact-btn {
-  background-color: #818cf8;
+.social-links > li > a {
+  color: #818cf8;
+  padding: 10px;
+}
+
+.social-links li:hover {
+  transform: translateY(-5px); /* Move icon up on hover */
+}
+
+.social-links a {
+  transition: transform 0.3s ease-in-out;
+}
+
+.social-links a:hover {
+  transform: scale(1.2); /* Scale icon on hover */
+}
+
+/* .imgbox {
+  background-image: url("../../../public/assets/image/profile.jpg");
+  background-position: center;
+  background-clip: border-box;
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 300px;
+  border-radius: 24px;
+} */
+
+.img-container {
+  position: relative;
+  height: 310px;
+  width: 310px;
+  border-radius: 50%; /* Circular border effect */
+  padding: 5px;
 }
 
 .imgbox {
   background-image: url("../../../public/assets/image/profile.jpg");
-  height: 360px;
-  width: 360px;
-  border-radius: 24px;
+  background-position: center;
+  background-clip: border-box;
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  position: relative;
+  z-index: 1;
 }
 
+.img-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 50%;
+  background-image: linear-gradient(90deg, #ff0080, #ff8c00, #40e0d0);
+  background-size: 300% 300%;
+  animation: moveBorder 1.2s linear infinite;
+  z-index: 0;
+}
+
+@keyframes moveBorder {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 .text-home {
   color: #ffff;
 }
@@ -108,7 +167,7 @@
 
 .frontend-text,
 .backend-text {
-  width: 400px;
+  width: 300px;
   color: #ffff;
 }
 
@@ -173,3 +232,89 @@
   font-size: 24px;
   margin-bottom: 8px;
 }
+
+/* Start Responsive CSS */
+
+@media (min-width: 1050px) {
+  .h3Andp {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 33.33%;
+  }
+  .main-home {
+    padding-top: 8rem;
+  }
+}
+
+@media (max-width: 1050px) {
+  .main-home {
+    margin-top: 10px;
+    padding-top: 20px;
+  }
+  .main-3 {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+  }
+  .social-links {
+    display: flex;
+  }
+  .social-links > li {
+    margin-left: 10px;
+  }
+  .scrollAndIcon {
+    display: none;
+  }
+  .xyz {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .my-name {
+    font-size: 40px;
+    margin-top: 20px;
+  }
+  .specialty {
+    margin-top: 20px;
+  }
+  .text-page {
+    padding: 0 40px;
+  }
+
+  .frontend-text > h6 {
+    max-width: 300px;
+  }
+
+  .backend-text > h6 {
+    max-width: 300px;
+  }
+  .contact-div {
+    display: none;
+  }
+}
+
+@media (max-width: 576px) {
+  .img-container {
+    height: 260px;
+    width: 260px;
+  }
+
+  .imgbox {
+    height: 250px;
+    width: 250px;
+  }
+  .my-name {
+    font-size: 30px;
+    margin-top: 20px;
+  }
+  .specialty {
+    margin-top: 20px;
+    font-size: 22px;
+  }
+  .servicesOfMain {
+    padding: 10px 20px;
+  }
+}
+
+/* End Responsive CSS */
