--- a/src/app/(root)/about/about.css
+++ b/src/app/(root)/about/about.css
@@ -1,5 +1,68 @@
-.aaa {
-  height: 100vh;
-  color: red !important;
-  background-color: blue;
+.text {
+  color: #ffff;
+  background-color: #0f172a;
+  padding: 80px 0;
+}
+
+.text > h1 {
+  font-size: 50px;
+  font-weight: 800;
+}
+
+.text > h5 {
+  font-weight: 400;
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+.aboutAndImage {
+  background-color: #1e293b;
+  padding: 40px 20px;
+}
+
+.text-about {
+  color: #ffff;
+  font-size: 18px;
+  max-width: 900px;
+  letter-spacing: 1.09;
+  word-wrap: 1.3;
+  font-weight: 100;
+  padding: 0 30px;
+}
+
+.text-about > h1 {
+  font-size: 40px;
+}
+
+.text-about > h6 {
+  color: #818cf8;
+}
+
+.text-about > p {
+  margin: 24px 0;
+}
+
+.three-about {
+  color: #ffff;
+  padding: 0 30px;
+}
+
+.numberAndWord > h2 {
+  font-size: 30px;
+  font-weight: 700;
+  color: #818cf8;
+}
+
+.numberAndWord > h6 {
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.imgbox-profile {
+  background-image: url("../../../../public/assets/image/profile.jpg");
+  background-repeat: no-repeat;
+  height: 400px;
+  width: auto;
+  background-clip: padding-box;
+  background-position: center;
 }
