--- a/src/app/(root)/navbar/navbar.css
+++ b/src/app/(root)/navbar/navbar.css
@@ -1,4 +1,8 @@
 /* Header Styles */
+.navbar-section {
+  position: relative;
+}
+
 header {
   background-color: #0f172a;
   position: fixed;
@@ -6,9 +10,14 @@ header {
   top: 0;
   width: 100%;
   z-index: 1000;
+  padding: 10px 0;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Navigation List Items */
+main {
+  padding-top: 75px;
+}
+
 .ul-nav > li {
   margin-left: 16px;
   font-size: 20px;
@@ -22,11 +31,11 @@ header {
 }
 
 .ul-nav > li a:hover {
-  color: #a24cff; /* Hover effect for links */
+  color: #a24cff;
 }
 
 .ul-nav > li a.active {
-  color: #a24cff; /* Color for active link */
+  color: #a24cff;
 }
 
 /* Logo Styles */
@@ -54,35 +63,31 @@ header {
   cursor: pointer;
 }
 
-/* Responsive Navigation - Hide by default on small screens */
 nav > .ul-nav {
   display: none;
 }
 
-/* Show the navigation when the `visible` class is added */
 nav.visible > .ul-nav {
   display: block;
   flex-direction: column;
   background-color: #0f172a;
   position: absolute;
-  top: 42px; /* Adjust this based on your header height */
+  top: 52px;
   right: 0;
   padding: 20px;
   width: 100%;
 }
 
 .ul-nav li {
-  margin: 10px 0; /* Add some margin for mobile nav */
+  margin: 10px 0;
 }
 
-/* Media Query for Large Screens - Hide Mobile Icons */
 @media (min-width: 1050px) {
   .icon-dark > .res-icon,
   .dark-mode {
     display: none;
   }
 
-  /* Show navigation as a horizontal list */
   nav > .ul-nav {
     display: flex;
     background: none;
@@ -90,29 +95,31 @@ nav.visible > .ul-nav {
     padding: 0;
   }
 
-  /* Remove the block style for large screens */
   ul.ul-nav {
     flex-direction: row;
   }
 
   ul.ul-nav li {
-    margin: 0 20px; /* Adjust for spacing between items */
+    margin: 0 20px;
   }
 }
 
 /* Media Query for Small Screens */
 @media (max-width: 1050px) {
-  /* Ensure the icons for mobile display */
   .icon-dark > .res-icon,
   .dark-mode {
     display: inline-block;
   }
 
-  /* Navigation in column layout */
   nav.visible > .ul-nav {
     display: block;
     height: 100vh;
     flex-direction: column;
+    background-color: #0f172a;
+    position: absolute;
+    top: 52px;
+    right: 0;
+    width: 100%;
   }
 
   ul.ul-nav li {
