--- a/src/app/(root)/about/about.css
+++ b/src/app/(root)/about/about.css
@@ -74,10 +74,12 @@
   padding: 40px 0;
 }
 
-.current {
+.current,.introduction,.freelance {
   display: flex;
-  justify-content: end;
+  justify-content:center;
   align-items: center;
+  color: #ffff;
+  font-size: 2.4rem;
 }
 
 .aboutWork {
