--- a/src/app/(root)/home.css
+++ b/src/app/(root)/home.css
@@ -238,21 +238,28 @@
 }
 
 /* Tech */
+.techSkills {
+  background-color: #1e293b;
+  color: #ffff;
+  padding: 40px 10px;
+}
+
 .techName {
   font-size: 50px;
   color: #ffff;
-  font-weight:700;
-}
-.techSkills {
-  background-color: red;
+  font-weight: 700;
 }
 
 .imgboxTech {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 10px;
-  
+  font-size: 20px;
+  padding: 4px 10px;
+}
+
+.imgboxTech h6 {
+  margin-left: 8px;
 }
 
 /* Tech */
